# virtual-agora

./: .env.example  .gitignore  CLAUDE.md  README.md  cleanup_moderator_methods.md  cleanup_summary.md  config.example.yml  config.yml  debug_graph.py  pyproject.toml  requirements.txt  setup.py  test_list_append_fix.py
checkpoints/: .gitkeep
config/: discussion_config.py
docs/: architecture-refactoring-overview.md  architecture-refactoring-steps.md  configuration.md  environment-setup.md  how-discussions-work.md  project-spec.md  project_spec.md  project_spec_2.md  quick-start-refactoring-guide.md
docs/migration_1.1_to_1.3/: breaking-changes.md  migration-overview.md  phase-1-config-state.md  phase-2-specialized-agents.md  phase-3-graph-transformation.md  phase-4-hitl-ui.md  phase-5-testing-validation.md  rollback-strategy.md
docs/roadmap/: epic-1-core-infrastructure.md  epic-10-error-handling-resilience.md  epic-2-llm-provider-integration.md  epic-3-moderator-agent.md  epic-4-discussion-agent-framework.md  epic-5-agenda-management.md  epic-6-discussion-flow-state.md  epic-7-human-in-the-loop.md  epic-8-reporting-documentation.md  epic-9-terminal-ui.md  project-roadmap.md
docs/testing/: implementation-guide.md  mock-strategies.md  production-integration-test-plan.md  test-execution-patterns.md  test-plan-improvements-summary.md
examples/: config.example.yml
sessions/: .gitkeep
src/virtual_agora/: __init__.py  app_v13.py  main.py
tests/: __init__.py  comprehensive_fix.py  conftest.py  final_syntax_fix.py  fix_dict_syntax.py  fix_typeddict_access.py  test_discussion_flow_end_to_end.py  test_final_validation.py  test_langgraph_error_handling.py  test_pass_through_node_fix.py  test_reducer_behavior.py  test_reducer_call_monitoring.py  test_specialized_agents.py  test_state_flow_integration.py  test_user_participation_flow.py
tests/agenda/: test_analytics.py  test_integration.py  test_manager.py  test_models.py  test_synthesis.py  test_voting.py
tests/agents/: test_agent_factory.py  test_coordination.py  test_discussion_agent.py  test_ecclesia_report_agent_v3.py  test_llm_agent.py  test_moderator.py  test_moderator_integration.py  test_moderator_nodes.py  (+5 more)
(+274 files in other folders)
